<resources>
    <string name="app_name">SchoolCon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Messages</item>
        <item>Attendance</item>
        <item>Schedules</item>
        <item>Profile</item>
        <item>Fee Details</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="message">Message</string>
    <string name="attendance">Attendance</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="legal">Legal</string>
    <string name="about_us">About Us</string>
    <string name="myschoolcon_website">www.myschoolcon.com</string>
    <string name="scon">sCon</string>
    <string name="_123_456_7890">(123) 456-7890</string>
    <string name="home">Home</string>
    <string name="_321_654_0987">(321) 654-0987</string>
    <string name="work">Work</string>
    <string name="chintan_letsnurture_com">chintan@letsnurture.com</string>
    <string name="pratik_letsnurture_com">pratik@letsnurture.com</string>
    <string name="_202_park_street_los_angeles">202 Park Street, Los Angeles</string>
    <string name="_221b_baker_street_england">221B Baker Street, England</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="remove_contact">Remove Contact</string>
    <string name="todo">todo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email *</string>
    <string name="prompt_password">Password *</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="date_of_birth">Date of birth</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="gender">Gender</string>
    <string name="birth_place">Birth Place</string>
    <string name="blood_group">Blood Group</string>
    <string name="nationality">Nationality</string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="adhar">Adhar</string>
    <string name="caste_category">Caste Category</string>
    <string name="caste">Caste</string>
    <string name="religion">Religion</string>
    <string name="medical_history">Medical History</string>
    <string name="siblings_info">Siblings Info</string>
    <string name="skills">Skills</string>
    <string name="disability">Disability</string>
    <string name="Fee">Fee</string>
</resources>
