<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_24px"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_event_available_black_24px"
            android:title="@string/attendance" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_date_range_black_24px"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24px"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/legal">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_outline_black_24px"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
